--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <!--Chia trang thanh dang luoi 12 cot-->
   <div class="grid grid-cols-12 gap-4 bg-custom-bg">
-    <div class = "col-span-6" >
+    <div class = "ml-4 col-span-6" >
       <div class="grid grid-cols-12 gap-4 p-4 ">
-        <div class = "col-span-12 text-3xl font-bold flex justify-center">Dealers</div>
+        <div class = "col-span-12 text-4xl font-bold flex justify-start">Dealers</div>
         <div class="col-span-2 borrder border-r-2 border-dashed border-gray-900">Home</div>
         <div class="col-span-2 borrder border-r-2 border-dashed border-gray-900">About</div>
         <div class="col-span-3 borrder border-r-2 border-dashed border-gray-900">All Deals</div>
@@ -28,6 +28,7 @@
       <div class = "col-span-2 bg-slate-400 border border-blue-950 rounded-md flex justify-center">Subcribe Me</div>
     </div>
     </div> 
+
     <div class="col-span-8 ml-7 p-7 bg-white">
       <div class="relative left-4 mb-4 text-2xl font-semibold">This is one very amazing deal</div>
       <div class="mb-4">
@@ -59,14 +60,14 @@
       </div>
       <div class="flex justify-center m-4 p-5 text-xl font-semibold border border-green-900 rounded-xl bg-gradient-to-t from-green-600 to-green-400  text-green-800">Buy this deal -27$</div>
     </div>
-    <div class="col-span-12 flex justify-center border border-t-gray-400 border-b-gray-400 border-dashed">
+    <div class="bg-white col-span-12 flex justify-center border border-t-gray-400 border-b-gray-400 border-dashed">
       <div class="inline-block p-8 mr-4">Dealers</div>
       <div class="inline-block p-8 mr-4">THEMES KINGDOM</div>
       <div class="inline-block p-8 mr-4">DovesMedic</div>
       <div class="inline-block p-8 mr-4">THEMES KINGDOM</div>
       <div class="inline-block p-8">&m</div>
     </div>
-      <div class="col-span-4">
+      <div class=" col-span-4">
         <div class="ml-6 p-2 font-semibold">Lorem Ipsum Dolor Deal</div>
         <div class="ml-6 p-1 border border-gray-400">
           <img class="w-auto mb-2" src="/src/img/wallhaven-lmxmxy.png" alt="">
@@ -137,6 +138,41 @@
           <div class="ml-4 inline-block text-xs font-semibold text-gray-400">71 days 23 hrs 38 min 36 sec</div>
           <div class="ml-4 p-1 inline-block font-semibold border border-green-900 rounded-xl bg-gradient-to-t from-green-600 to-green-400  text-green-800 ">SEE DEAL</div>
         </div>
+      </div>
+      <div class="col-span-4 ml-6 pt-1 border border-t-gray-400 border-dashed">
+        <div class="p-2 font-bold">About Our Deals</div>
+        <div class="p-2 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore at dolore magna aliqua.
+                      Ut enim ad minim veniam, quis nostrud.
+        </div>
+        <div class="p-2 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore at dolore magna aliqua.
+                      Ut enim ad minim veniam, quis nostrud.
+        </div>
+      </div>
+      <div class="col-span-4 p-3 border border-t-gray-400 border-dashed">
+        <div class="font-bold">Twitter Buzz</div>
+        <div class="pb-7 border border-b-gray-400 border-dashed">
+          <div class="pt-3 pb-3 text-gray-500">7 Photoshop tips for designing clean and modern websites 
+            <span class="text-green-500">su.pr/1ruOpp</span>
+          </div>
+          <div class="inline-block p-1 bg-slate-300 font-semibold rounded-lg text-gray-500">1 Day Ago</div>
+        </div>
+        <div class="pt-3">
+          <div class="pt-3 pb-3 text-gray-500">7 Photoshop tips for designing clean and modern websites 
+            <span class="text-green-500">su.pr/1ruOpp</span>
+          </div>
+          <div class="inline-block p-1 bg-slate-300 font-semibold rounded-lg text-gray-500">1 Day Ago</div>
+        </div>
+      </div>
+      <div class="col-span-4 pt-3 border border-t-gray-400 border-dashed">
+        <div class="font-bold pb-2">Other Pages</div>
+        <div class="font-semibold text-green-500 pb-3 border border-b-gray-400 border-dashed">Home</div>
+        <div class="font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">About Our Deals</div>
+        <div class="font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">All Deals</div>
+        <div class="font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">Contact</div>
+      </div>
+      <div class="col-span-12 border border-t-gray-400 border-dashed flex justify-center pt-6 text-gray-400"> Copyright information Goes Here 2012. All Tights Reserved</div>
+      <div class="col-span-12 flex justify-center pb-8 text-gray-400">Designed by 
+        <span class="text-black"> Themes Kingdom</span>
       </div>
   </div>
 </body>
