add mobile responsive

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
   <!--Chia trang thanh dang luoi 12 cot-->
   <div class="grid grid-cols-12 gap-4 bg-custom-bg">
+    <!--Header-->
     <div class = "ml-4 col-span-6" >
       <div class="grid grid-cols-12 gap-4 p-4 ">
-        <div class = "col-span-12 text-4xl font-bold flex justify-start">Dealers</div>
-        <div class="col-span-2 borrder border-r-2 border-dashed border-gray-900">Home</div>
-        <div class="col-span-2 borrder border-r-2 border-dashed border-gray-900">About</div>
-        <div class="col-span-3 borrder border-r-2 border-dashed border-gray-900">All Deals</div>
-        <div class="col-span-4 borrder border-r-2 border-dashed border-gray-900">Submit Your Goal</div>
-        <div class="col-span-1 bg-red-400"></div> <!-- Phần tử rỗng để thêm khoảng trống nếu cần -->
+        <div class="col-span-12 text-4xl font-bold flex justify-start">Dealers</div>
+        <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">Home</div>
+        <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">About</div>
+        <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">All Deals</div>
+        <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">Submit Your Goal</div>
+        <div class="col-span-12 sm:col-span-1 bg-red-400"></div> <!-- logo -->
       </div>
     </div>
     <div class = "col-span-6 ">
@@ -24,12 +25,13 @@
       <div class = 'col-span-6 font-semibold'>
         Sign up for free to get deals directly to your mailbox
       </div>
-      <div class = "col-span-4 border border-gray-400 text-xs text-gray-500 p-1.5">Enter Your Email Address</div>
-      <div class = "col-span-2 bg-slate-400 border border-blue-950 rounded-md flex justify-center">Subcribe Me</div>
+      <div class = "col-span-6 sm:col-span-4 border border-gray-400 text-xs text-gray-500 p-1.5">Enter Your Email Address</div>
+      <div class = "col-span-6 sm:col-span-2 bg-slate-400 border border-blue-950 rounded-md flex justify-center">Subcribe Me</div>
     </div>
     </div> 
-
-    <div class="col-span-8 ml-7 p-7 bg-white">
+    <!--end hd-->
+    <!--body-->
+    <div class="col-span-12 sm:col-span-8 sm:ml-7 p-7 bg-white">
       <div class="relative left-4 mb-4 text-2xl font-semibold">This is one very amazing deal</div>
       <div class="mb-4">
         <img class="w-auto p-2 border border-gray-400" src="/src/img/wallhaven-lmxmxy.png" alt="">
@@ -37,7 +39,7 @@
       <div class="relative left-2 p-2 text-sm text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
     </div>
-    <div class="col-span-4 mr-7 p-8 bg-white">
+    <div class="col-span-12 sm:col-span-4 mr-7 p-8 bg-white">
       <div class="p-2 m-1 flex justify-center text-gray-400 font-semibold border-b border-b-gray-200">This deal will end in:</div>
       <div class="p-2 m-1 border-t border-t-gray-200 border-b border-b-gray-200 font-semibold flex justify-center">6 days 1 hrs 52 min 51 sec</div>
       <div class="p-2 m-1 border-t border-t-gray-200">
@@ -60,16 +62,16 @@
       </div>
       <div class="flex justify-center m-4 p-5 text-xl font-semibold border border-green-900 rounded-xl bg-gradient-to-t from-green-600 to-green-400  text-green-800">Buy this deal -27$</div>
     </div>
-    <div class="bg-white col-span-12 flex justify-center border border-t-gray-400 border-b-gray-400 border-dashed">
-      <div class="inline-block p-8 mr-4">Dealers</div>
-      <div class="inline-block p-8 mr-4">THEMES KINGDOM</div>
-      <div class="inline-block p-8 mr-4">DovesMedic</div>
-      <div class="inline-block p-8 mr-4">THEMES KINGDOM</div>
-      <div class="inline-block p-8">&m</div>
+    <div class="bg-white col-span-12 flex flex-wrap justify-center border border-t-gray-400 border-b-gray-400 border-dashed">
+      <div class="inline-block p-4 sm:p-8 mr-4">Dealers</div>
+      <div class="inline-block p-4 sm:p-8 mr-4">THEMES KINGDOM</div>
+      <div class="inline-block p-4 sm:p-8 mr-4">DovesMedic</div>
+      <div class="inline-block p-4 sm:p-8 mr-4">THEMES KINGDOM</div>
+      <div class="inline-block p-4 sm:p-8">&m</div>
     </div>
-      <div class=" col-span-4">
-        <div class="ml-6 p-2 font-semibold">Lorem Ipsum Dolor Deal</div>
-        <div class="ml-6 p-1 border border-gray-400">
+      <div class="col-span-12 sm:col-span-4">
+        <div class="ml-3 mr-3 sm:mr-0 sm:ml-6 p-2 font-semibold">Lorem Ipsum Dolor Deal</div>
+        <div class="ml-3 mr-3 sm:mr-0 sm:ml-6 p-1 border border-gray-400">
           <img class="w-auto mb-2" src="/src/img/wallhaven-lmxmxy.png" alt="">
           <div class="flex justify-around">
             <div class="inline-block p-2 border border-r-gray-400 border-dashed">
@@ -91,7 +93,7 @@
           <div class="ml-4 p-1 inline-block font-semibold border border-green-900 rounded-xl bg-gradient-to-t from-green-600 to-green-400  text-green-800 ">SEE DEAL</div>
         </div>
       </div>
-      <div class="col-span-4">
+      <div class="col-span-12 border border-t-2 sm:border-0 border-gray-400 sm:col-span-4">
         <div class="ml-3 mr-3 p-2 font-semibold">Lorem Ipsum Dolor Deal</div>
         <div class="ml-3 mr-3 p-1 border border-gray-400">
           <img class="w-auto mb-2" src="/src/img/wallhaven-lmxmxy.png" alt="">
@@ -115,9 +117,9 @@
           <div class="ml-4 p-1 inline-block font-semibold border border-green-900 rounded-xl bg-gradient-to-t from-green-600 to-green-400  text-green-800 ">SEE DEAL</div>
         </div>
       </div>
-      <div class="col-span-4">
-        <div class="mr-6 p-2 font-semibold">Lorem Ipsum Dolor Deal</div>
-        <div class="mr-6 p-1 border border-gray-400">
+      <div class="col-span-12 border border-t-2 sm:border-0 border-gray-400 sm:col-span-4">
+        <div class="ml-3 mr-3 sm:ml-0 sm:mr-6 p-2 font-semibold">Lorem Ipsum Dolor Deal</div>
+        <div class="ml-3 mr-3 sm:ml-0 sm:mr-6 p-1 border border-gray-400">
           <img class="w-auto mb-2" src="/src/img/wallhaven-lmxmxy.png" alt="">
           <div class="flex justify-around">
             <div class="inline-block p-2 border border-r-gray-400 border-dashed">
@@ -139,7 +141,7 @@
           <div class="ml-4 p-1 inline-block font-semibold border border-green-900 rounded-xl bg-gradient-to-t from-green-600 to-green-400  text-green-800 ">SEE DEAL</div>
         </div>
       </div>
-      <div class="col-span-4 ml-6 pt-1 border border-t-gray-400 border-dashed">
+      <div class="col-span-12 sm:col-span-4 ml-6 pt-1 sm:border border-t-gray-400 border-dashed">
         <div class="p-2 font-bold">About Our Deals</div>
         <div class="p-2 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore at dolore magna aliqua.
                       Ut enim ad minim veniam, quis nostrud.
@@ -148,7 +150,7 @@
                       Ut enim ad minim veniam, quis nostrud.
         </div>
       </div>
-      <div class="col-span-4 p-3 border border-t-gray-400 border-dashed">
+      <div class="col-span-12 sm:col-span-4 p-3 border border-t-gray-400 sm:border-dashed">
         <div class="font-bold">Twitter Buzz</div>
         <div class="pb-7 border border-b-gray-400 border-dashed">
           <div class="pt-3 pb-3 text-gray-500">7 Photoshop tips for designing clean and modern websites 
@@ -163,14 +165,14 @@
           <div class="inline-block p-1 bg-slate-300 font-semibold rounded-lg text-gray-500">1 Day Ago</div>
         </div>
       </div>
-      <div class="col-span-4 pt-3 border border-t-gray-400 border-dashed">
-        <div class="font-bold pb-2">Other Pages</div>
-        <div class="font-semibold text-green-500 pb-3 border border-b-gray-400 border-dashed">Home</div>
-        <div class="font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">About Our Deals</div>
-        <div class="font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">All Deals</div>
-        <div class="font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">Contact</div>
+      <div class="col-span-12 sm:col-span-4 pt-3 border border-t-gray-400 sm:border-dashed">
+        <div class="ml-3 sm:ml-0 font-bold pb-2">Other Pages</div>
+        <div class="flex justify-center sm:justify-start font-semibold text-green-500 pb-3 border border-b-gray-400 border-dashed">Home</div>
+        <div class="flex justify-center sm:justify-start font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">About Our Deals</div>
+        <div class="flex justify-center sm:justify-start font-semibold text-green-500 pt-2 pb-2 border border-b-gray-400 border-dashed">All Deals</div>
+        <div class="flex justify-center sm:justify-start font-semibold text-green-500 pt-2 pb-2 sm:border border-b-gray-400 border-dashed">Contact</div>
       </div>
-      <div class="col-span-12 border border-t-gray-400 border-dashed flex justify-center pt-6 text-gray-400"> Copyright information Goes Here 2012. All Tights Reserved</div>
+      <div class="col-span-12 border border-t-gray-400 sm:border-dashed flex justify-center pt-6 text-gray-400"> Copyright information Goes Here 2012. All Tights Reserved</div>
       <div class="col-span-12 flex justify-center pb-8 text-gray-400">Designed by 
         <span class="text-black"> Themes Kingdom</span>
       </div>
