--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">About</div>
         <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">All Deals</div>
         <div class="col-span-12 sm:col-span-2 borrder sm:border-r-2 sm:border-b-0 border-b-2 border-dashed border-gray-900">Submit Your Goal</div>
-        <div class="col-span-12 sm:col-span-1 bg-red-400"></div> <!-- logo -->
+        <div class="col-span-12 w-0 sm:col-span-1 sm:w-auto">
+          <img class="" src="/src/img/logo.png" alt="">
+        </div> <!-- logo -->
       </div>
     </div>
     <div class = "col-span-6 ">
